# evm-from-scratch

./: .gitignore  README.md  evm.json  notes.md
evm/: Cargo.toml
evm/src/: consts.rs  context.rs  eval.rs  helpers.rs  lib.rs  main.rs  memory.rs  stack.rs
rust/: Cargo.toml
rust/src/: block.rs  context.rs  environment.rs  eval.rs  helpers.rs  jump_map.rs  lib.rs  machine.rs  main.rs  memory.rs  opcode.rs  opcodes.rs  stack.rs  state.rs  test.rs  transaction.rs
