[package]
name = "evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
primitive-types = { version = "0.12", features = ["rlp"] }
rlp = "0.5.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sha3 = "0.10.6"
